--- a/LabFlask.ipynb
+++ b/LabFlask.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2c5e2122",
+   "id": "9a629282",
    "metadata": {},
    "source": [
     "# Data Loading & Preprocessing"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "0e6758d6",
+   "execution_count": 119,
+   "id": "02a7e283",
    "metadata": {},
    "outputs": [
     {
@@ -113,27 +113,120 @@
        "      <td>4.075075</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3271</th>\n",
+       "      <td>4.668102</td>\n",
+       "      <td>193.681735</td>\n",
+       "      <td>47580.991603</td>\n",
+       "      <td>7.166639</td>\n",
+       "      <td>359.948574</td>\n",
+       "      <td>526.424171</td>\n",
+       "      <td>13.894419</td>\n",
+       "      <td>66.687695</td>\n",
+       "      <td>4.435821</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3272</th>\n",
+       "      <td>7.808856</td>\n",
+       "      <td>193.553212</td>\n",
+       "      <td>17329.802160</td>\n",
+       "      <td>8.061362</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>392.449580</td>\n",
+       "      <td>19.903225</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.798243</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3273</th>\n",
+       "      <td>9.419510</td>\n",
+       "      <td>175.762646</td>\n",
+       "      <td>33155.578218</td>\n",
+       "      <td>7.350233</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>432.044783</td>\n",
+       "      <td>11.039070</td>\n",
+       "      <td>69.845400</td>\n",
+       "      <td>3.298875</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3274</th>\n",
+       "      <td>5.126763</td>\n",
+       "      <td>230.603758</td>\n",
+       "      <td>11983.869376</td>\n",
+       "      <td>6.303357</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>402.883113</td>\n",
+       "      <td>11.168946</td>\n",
+       "      <td>77.488213</td>\n",
+       "      <td>4.708658</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3275</th>\n",
+       "      <td>7.874671</td>\n",
+       "      <td>195.102299</td>\n",
+       "      <td>17404.177061</td>\n",
+       "      <td>7.509306</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>327.459760</td>\n",
+       "      <td>16.140368</td>\n",
+       "      <td>78.698446</td>\n",
+       "      <td>2.309149</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3276 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         ph    Hardness        Solids  Chloramines     Sulfate  Conductivity  \\\n",
-       "0       NaN  204.890455  20791.318981     7.300212  368.516441    564.308654   \n",
-       "1  3.716080  129.422921  18630.057858     6.635246         NaN    592.885359   \n",
-       "2  8.099124  224.236259  19909.541732     9.275884         NaN    418.606213   \n",
-       "3  8.316766  214.373394  22018.417441     8.059332  356.886136    363.266516   \n",
-       "4  9.092223  181.101509  17978.986339     6.546600  310.135738    398.410813   \n",
+       "            ph    Hardness        Solids  Chloramines     Sulfate  \\\n",
+       "0          NaN  204.890455  20791.318981     7.300212  368.516441   \n",
+       "1     3.716080  129.422921  18630.057858     6.635246         NaN   \n",
+       "2     8.099124  224.236259  19909.541732     9.275884         NaN   \n",
+       "3     8.316766  214.373394  22018.417441     8.059332  356.886136   \n",
+       "4     9.092223  181.101509  17978.986339     6.546600  310.135738   \n",
+       "...        ...         ...           ...          ...         ...   \n",
+       "3271  4.668102  193.681735  47580.991603     7.166639  359.948574   \n",
+       "3272  7.808856  193.553212  17329.802160     8.061362         NaN   \n",
+       "3273  9.419510  175.762646  33155.578218     7.350233         NaN   \n",
+       "3274  5.126763  230.603758  11983.869376     6.303357         NaN   \n",
+       "3275  7.874671  195.102299  17404.177061     7.509306         NaN   \n",
        "\n",
-       "   Organic_carbon  Trihalomethanes  Turbidity  Potability  \n",
-       "0       10.379783        86.990970   2.963135           0  \n",
-       "1       15.180013        56.329076   4.500656           0  \n",
-       "2       16.868637        66.420093   3.055934           0  \n",
-       "3       18.436524       100.341674   4.628771           0  \n",
-       "4       11.558279        31.997993   4.075075           0  "
+       "      Conductivity  Organic_carbon  Trihalomethanes  Turbidity  Potability  \n",
+       "0       564.308654       10.379783        86.990970   2.963135           0  \n",
+       "1       592.885359       15.180013        56.329076   4.500656           0  \n",
+       "2       418.606213       16.868637        66.420093   3.055934           0  \n",
+       "3       363.266516       18.436524       100.341674   4.628771           0  \n",
+       "4       398.410813       11.558279        31.997993   4.075075           0  \n",
+       "...            ...             ...              ...        ...         ...  \n",
+       "3271    526.424171       13.894419        66.687695   4.435821           1  \n",
+       "3272    392.449580       19.903225              NaN   2.798243           1  \n",
+       "3273    432.044783       11.039070        69.845400   3.298875           1  \n",
+       "3274    402.883113       11.168946        77.488213   4.708658           1  \n",
+       "3275    327.459760       16.140368        78.698446   2.309149           1  \n",
+       "\n",
+       "[3276 rows x 10 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,13 +237,13 @@
     "         , 'Organic_carbon', 'Trihalomethanes','Turbidity','Potability'] \n",
     "feature_names = names[:9]\n",
     "data = pd.read_csv(\"C:/Users/Usuario/Desktop/QFM/S3/project/water_potability.csv\")\n",
-    "data[:5]"
+    "data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "5fbeeb75",
+   "id": "9718a11a",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5396913",
+   "id": "c6132732",
    "metadata": {},
    "source": [
     "  #### Remark:  We have some missing values, we opted for replacing those values with the mean of its corresponding column to not lose information since it takes up a big portion of our data."
@@ -192,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "13e78d71",
+   "id": "efa2ab07",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "394d2a20",
+   "id": "35757eb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec76183e",
+   "id": "ca122f5b",
    "metadata": {},
    "source": [
     "# Feature Selection"
@@ -347,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "bb7c3a5b",
+   "id": "f373863f",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "11379f24",
+   "id": "e9e61395",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75a097c6",
+   "id": "320331b7",
    "metadata": {},
    "source": [
     "### Scaling "
@@ -482,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "a60891e2",
+   "id": "6bb5fcb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "aea0ee72",
+   "id": "b460c15f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7586ba64",
+   "id": "32dc9b3b",
    "metadata": {},
    "source": [
     "# Models"
@@ -513,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1bcf5fa",
+   "id": "fda15567",
    "metadata": {},
    "source": [
     "### Logistic Regression "
@@ -522,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "c9a510ec",
+   "id": "fd0c5b3a",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e3d0a54",
+   "id": "758abe1e",
    "metadata": {},
    "source": [
     "### Decision Tree"
@@ -577,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "5bfe0ff5",
+   "id": "6fdaab7d",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b30c0ce0",
+   "id": "b4a2f4ba",
    "metadata": {},
    "source": [
     "### Random Forest"
@@ -618,8 +711,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "2e8e5a9b",
+   "execution_count": 121,
+   "id": "ab9a2875",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +757,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16a136ad",
+   "id": "c9c232ff",
+   "metadata": {},
+   "source": [
+    "## The dedcision tree model did best, so we are going to pickle it to save it and use it for the deployment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9337d2e4",
    "metadata": {},
    "source": [
     "# Pickling the Model"
@@ -673,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "8d05f21d",
+   "id": "c7f4a971",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,18 +786,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23f96c11",
+   "id": "5733f02e",
    "metadata": {},
    "source": [
     "# Deployment "
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "b835a2df",
+   "cell_type": "markdown",
+   "id": "5d18ca22",
    "metadata": {},
    "source": [
-    "%tb\n",
+    "### These scripts are just for representation in the notebook, each od these two scripts has his own file, app.py and index.html"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "cf1cafed",
+   "metadata": {},
+   "source": [
     "from flask import Flask, render_template, request\n",
     "import pickle\n",
     "import numpy as np\n",
@@ -719,8 +827,11 @@
     "    print(features)\n",
     "    final_features = np.array(features).reshape(1,4)\n",
     "    prediction = model.predict(final_features)\n",
-    "\n",
-    "    return render_template('index.html', prediction=' $ {}'.format(prediction))\n",
+    "    if prediction == 1 :\n",
+    "        output = 'potable.'\n",
+    "    else :\n",
+    "        output = 'non potable.'\n",
+    "    return render_template('index.html', prediction=output)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    app.run(debug=True)"
@@ -728,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4484d55c",
+   "id": "bdac69c7",
    "metadata": {},
    "source": [
     "# index.html"
@@ -736,36 +847,71 @@
   },
   {
    "cell_type": "raw",
-   "id": "dcccdaef",
+   "id": "18454936",
    "metadata": {},
    "source": [
     "<!DOCTYPE html>\n",
     "<html>\n",
     "<head>\n",
     "    <title>Decision Tree Model for Water Potability</title>\n",
+    "    <style>\n",
+    "        body {\n",
+    "            font-family: Arial, sans-serif;\n",
+    "            margin: 20px;\n",
+    "        }\n",
+    "        h2 {\n",
+    "            text-align: center;\n",
+    "        }\n",
+    "        form {\n",
+    "            width: 50%;\n",
+    "            margin: 0 auto;\n",
+    "        }\n",
+    "        label {\n",
+    "            display: block;\n",
+    "            margin-bottom: 10px;\n",
+    "        }\n",
+    "        input[type=\"number\"] {\n",
+    "            width: 100%;\n",
+    "            padding: 5px;\n",
+    "            margin-bottom: 15px;\n",
+    "        }\n",
+    "        input[type=\"submit\"] {\n",
+    "            background-color: #4CAF50;\n",
+    "            color: white;\n",
+    "            padding: 10px 20px;\n",
+    "            border: none;\n",
+    "            cursor: pointer;\n",
+    "            width: 100%;\n",
+    "        }\n",
+    "        p {\n",
+    "            text-align: center;\n",
+    "            font-weight: bold;\n",
+    "            font-size: 18px;\n",
+    "        }\n",
+    "    </style>\n",
     "</head>\n",
     "<body>\n",
-    "    <h1>Decision Tree Model Deployment</h1>\n",
+    "    <h2>Decision Tree Model Deployment for Water Potability</h2>\n",
     "    <form action=\"/predict\" method=\"post\">\n",
     "        <label for=\"hardness\">Hardness:</label>\n",
-    "        <input type=\"number\" name=\"hardness\" required><br><br>\n",
-    "        \n",
+    "        <input type=\"number\" name=\"hardness\" required><br>\n",
+    "\n",
     "        <label for=\"sulfate\">Sulfate:</label>\n",
-    "        <input type=\"number\" name=\"sulfate\" required><br><br>\n",
-    "        \n",
+    "        <input type=\"number\" name=\"sulfate\" required><br>\n",
+    "\n",
     "        <label for=\"conductivity\">Conductivity:</label>\n",
-    "        <input type=\"number\" name=\"conductivity\" required><br><br>\n",
-    "        \n",
+    "        <input type=\"number\" name=\"conductivity\" required><br>\n",
+    "\n",
     "        <label for=\"organic_carbon\">Organic Carbon:</label>\n",
-    "        <input type=\"number\" name=\"organic_carbon\" required><br><br>\n",
-    "        \n",
+    "        <input type=\"number\" name=\"organic_carbon\" required><br>\n",
+    "\n",
     "        <input type=\"submit\" value=\"Predict\">\n",
     "    </form>\n",
     "\n",
-    "{% if prediction %}\n",
-    "        <h2>Prediction:</h2>\n",
-    "        <p>The water is  {{ prediction }}</p>\n",
-    "{% endif %}\n",
+    "    {% if prediction %}\n",
+    "    <h2>Prediction:</h2>\n",
+    "    <p>The water is {{ prediction }}</p>\n",
+    "    {% endif %}\n",
     "</body>\n",
     "</html>\n"
    ]
